# issuematch

./: .containerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  README.md  TODO.md  catalog-info.yaml  fetch_issues.py  issuematch-pod.yaml  issuematch.quadlets  pyproject.toml  ruff_plr_output.txt
.github/workflows/: build-push.yml
alembic/: env.py
alembic/versions/: 313dd3bbbc8a_initial_schema.py  a1b2c3d4e5f6_add_password_and_api_tokens.py  b2c3d4e5f6a7_remove_github_oauth_columns.py  b8b90245ff14_initial_schema.py  c3a1f7e2d401_add_audit_log_and_vote_created_at.py  d4e5f6a7b801_add_user_role.py  e5f6a7b8c902_add_issue_type_and_unified_id_format.py
analysis/: grading_simulation.ipynb
app/: __init__.py  auth.py  config.py  crypto.py  database.py  errors.py  github.py  main.py  models.py  routes.py  schemas.py  seed_admin.py  version.py
app/static/: style.css
app/templates/: activity.html  admin_users.html  base.html  login.html  results.html  user.html  vote.html
app/templates/vote/: card.html  done.html
kube/: issuematch-pod.yaml  issuematch-secrets.yaml.example  issuematch.kube
oc/: README.md  inknos-issuematch-app.yaml  inknos-issuematch-dev-app.yaml  inknos-issuematch-dev-secrets.yaml  inknos-issuematch-dev-secrets.yaml.example  inknos-issuematch-init-sql.yaml  inknos-issuematch-secrets.yaml  inknos-issuematch-secrets.yaml.example  issuematch-app.yaml  issuematch-secrets.yaml.example
tests/: __init__.py  conftest.py  test_admin.py  test_api.py  test_auth.py  test_config.py  test_crypto.py  test_html_routes.py  test_password_and_tokens.py  test_seed_admin.py
