[project]
authors = [
    { name = "Nicola Sella", email = "nsella@redhat.com" },
]
name = "issuematch"
version = "0.4.0"
description = "Rank GitHub issues with your team"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "httpx",
    "jinja2",
    "python-multipart",
    "python-dotenv",
    "cryptography",
    "pwdlib[argon2]",
    "fastapi-mcp",  # exposes API routes as MCP tools at /mcp
    "itsdangerous",  # required by starlette SessionMiddleware (optional dep)
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "aiosqlite",
    "commitizen",
]
analysis = [
    "numpy",
    "matplotlib",
    "jupyter",
    "ipykernel",
    "ipyparallel",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
src = ["app"]
exclude = ["alembic/versions"]

# This is the section where Black is mostly replaced with Ruff
[tool.ruff.format]
exclude = [
    ".git",
    ".history",
    ".tox",
    ".venv",
    "build",
    "dist",
    "docs",
    "hack",
    "alembic/versions",
]
quote-style = "preserve"

[tool.ruff.lint]
select = [
    # More stuff here https://docs.astral.sh/ruff/rules/
    "F", # Pyflakes
    "FAST", # Fastapi
    "E", # Pycodestyle Error
    "W", # Pycodestyle Warning
    "N", # PEP8 Naming
    "UP", # Pyupgrade
    "ANN", # flake8-annotations
    "S", # Bandit
    "B", # Bugbear
    "A", # flake-8-builtins
    "YTT", # flake-8-2020
    "PLC", # Pylint Convention
    "PLE", # Pylint Error
    "PLW", # Pylint Warning
    "I", # isort
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "RET", # flake8-return
    "RSE", # flake8-raise
    "C90", # mccabe complexity
    "PERF", # Perflint
    "FURB", # refurb
    "RUF", # Ruff-specific rules
    "T10", # flake8-debugger
    "T20", # flake8-print
    "ISC", # flake8-implicit-str-concat
    "PGH", # pygrep-hooks
    "FLY", # flynt (prefer f-strings)
    "FA", # flake8-future-annotations
    "PLR", # Pylint Refactor
    "ASYNC", # flake8-async
    "TRY", # tryceratops
    "PT", # flake8-pytest-style
    "DTZ", # flake8-datetimez
    "TC", # flake8-type-checking
    "BLE", # flake8-blind-except
    "EM", # flake8-errmsg
    "PTH", # flake8-use-pathlib
    "D", # pydocstyle
    "FBT", # flake8-boolean-trap
    "ERA", # eradicate (commented-out code)
    "INP", # flake8-no-pep420
    "Q", # flake8-quotes
    "ARG", # flake8-unused-arguments
    "COM", # flake8-commas
    "ICN", # flake8-import-conventions
    "SLF", # flake8-self
    "G", # flake8-logging-format
    "LOG", # flake8-logging
    "EXE", # flake8-executable
    "TID", # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "INP001", "PLR2004", "D100", "D103"]
"alembic/**" = ["INP001", "D"]
"analysis/**" = ["PLR2004", "PLR0913", "D"]
"app/routes.py" = ["PLR0913"]  # FastAPI DI injects many params
"app/github.py" = ["PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
version_files = [
    "pyproject.toml:^version",
    "app/version.py:^__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
major_version_zero = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing"
